# FromTutorialToCode

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  youtube_pull.py
tutorials/ADVANCED_Python_AI_Agent_Tutorial_-_Using_RAG/: .gitignore  README.md  main.py  note_engine.py  pdf.py  prompts.py  pyproject.toml
tutorials/ADVANCED_Python_AI_Agent_Tutorial_-_Using_RAG/data/: notes.txt
tutorials/ADVANCED_Python_AI_Agent_Tutorial_-_Using_RAG/data/canada/: README.md  docstore.json
tutorials/ADVANCED_Python_AI_Agent_Tutorial_-_Using_RAG/data/examples/: notes.txt
tutorials/ADVANCED_Python_AI_Agent_Tutorial_-_Using_RAG/data/examples/canada/: default__vector_store.json  index_store.json
tutorials/AI_Coding_101_Ultimate_Prompt_Guide_(37_tips)/: GPT_extracted_tips.md  README.md
tutorials/Cursor_Vibe_Coding_Tutorial_-_For_COMPLETE_Beginners_(No_Experience_Needed)/: README.md
tutorials/Cursor_Vibe_Coding_Tutorial_-_For_COMPLETE_Beginners_(No_Experience_Needed)/.cursor/rules/: framework.mdc
tutorials/How_to_automate_Notion_with_Python_Notion_API_Tutorial/: .gitignore  README.md  main.py  pyproject.toml  utils.py
tutorials/Learn_Docker_and_Deploy_to_AWS_-_Beginner_Tutorial/: Dockerfile  README.md  app.py  compose.yml  docker_commands.md
tutorials/Learn_Docker_and_Deploy_to_AWS_-_Beginner_Tutorial/shared_folder/: shared_file.txt
