[project]
name = "fromtutorialtocode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp>=2026.3.17",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
explicit_package_bases = true

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pre-commit>=4.5.1",
]
