[project]
name = "advanced-python-ai-agent-tutorial-using-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index-core>=0.14.20",
    "llama-index-experimental>=0.6.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.2.2",
]
