[project]
name = "advanced-python-ai-agent-tutorial-using-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index-core>=0.14.20",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-experimental>=0.6.6",
    "llama-index-readers-file>=0.6.0",
    "mistralai==1.9.3",
    "pandas>=2.2.3",
    "polars>=1,<2",
    "python-dotenv>=1.2.2",
]
